Bug 127733 - FILESAVE DOCX Hyperlink does not work when the target is chart
Summary: FILESAVE DOCX Hyperlink does not work when the target is chart
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1 all versions
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx
Depends on:
Blocks: OOXML-Shapes DOCX-Hyperlink
  Show dependency treegraph
 
Reported: 2019-09-24 07:23 UTC by NISZ LibreOffice Team
Modified: 2019-09-30 12:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODT file from Writer. (13.09 KB, application/binary)
2019-09-24 07:23 UTC, NISZ LibreOffice Team
Details
The original file saved as DOCX. (15.01 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-09-24 07:24 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-09-24 07:23:21 UTC
Description:
Hyperlink with internal chart target in DOCX documents created with Writer is broken.

Steps to Reproduce:
    1. Create a document in LibreOffice.
    2. Insert a page break and a chart.
    3. Click on the first page.
    4. Insert a hyperlink and set the chart as the target of the hyperlink.
    5. Save the document in DOCX format.
    6. Reload the file.

Actual Results:
The hyperlink doesn’t work.

Expected Results:
The hyperlink should work after export.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 0d90da9ea0a23c9c4afac62025208559b1496a0e
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-09-24 07:23:53 UTC
Created attachment 154402 [details]
Example ODT file from Writer.
Comment 2 NISZ LibreOffice Team 2019-09-24 07:24:08 UTC
Created attachment 154403 [details]
The original file saved as DOCX.
Comment 3 Xisco Faulí 2019-09-24 12:57:31 UTC
Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: a283627036c9b1c56e4b765866b8fb8a26ec87ab
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 4 Commit Notification 2019-09-30 11:01:56 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/97fba7ebf350adcec6baa6c4a863d058fb90406a

tdf#127733 DOCX export: fix internal hyperlinks to chart target

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.