tdf#127733 DOCX export: fix internal hyperlinks to chart target

Hyperlinks to internal chart targets didn't work after export.

Change-Id: I724c6af8fd7f1961260b82331b9f62d8cbd88f25
Reviewed-on: https://gerrit.libreoffice.org/79456
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>